# avalanche-forecast

./: .coverage_rc  .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml  pyproject.toml  terminal_aliases.sh
.github/workflows/: lint.yml  release.yml  test.yml  version_tag.yml
config/dev/: dagster.yaml
config/prod/: dagster.yaml
requirements/: pip_requirements.txt
resources/clickhouse/config/: config.xml
resources/clickhouse/init/: init.sql
src/: __init__.py  jobs.py  partitions.py
src/assets/ingestion/: avalanche_forecast_center_assets.py  caic_assets.py
src/config/: model_deployments.yaml
src/core/ingestion/: caic.py  nwac.py
src/core/ml/: train.py
src/core/transformations/: avalanche_forecast_center_transformations.py
src/definitions/: dev_definitions.py
src/ingestion/avalanche_forecast/: common.py  custom_types.py  extract.py  ingestion_helpers.py  load.py  transform.py
src/ml/: model_helpers.py
src/ml/training/: training_helpers.py
src/resources/: config_resources.py
src/resources/core/: duck_db_io_manager.py  file_io_managers.py  mlflow_resource.py
src/schedules/: ingestion_schedules.py
src/schemas/: schema_config.py
src/schemas/feature_sets/: avalanche_forecast.py
src/utils/: constants.py  datetime_helpers.py  ingestion_helpers.py  loggers.py  schema_helpers.py
test/: test_example.py
test/ml/: test_model_helpers.py
test/transformations/: test_avalanche_forecast_center_transformations.py
test/utils/: test_datetime_helpers.py
(+41 files in other folders)
